@@ -1,23 +1,18 @@
 package com.bamdoliro.gilajabi.application.school;
 
-import com.bamdoliro.gilajabi.domain.job.entity.JobCategory;
 import com.bamdoliro.gilajabi.domain.school.entity.MeisterSchool;
 import com.bamdoliro.gilajabi.global.annotation.UseCase;
-import com.bamdoliro.gilajabi.presentation.aptitude.dto.response.SchoolRecommendResponse;
+import com.bamdoliro.gilajabi.presentation.school.dto.response.SchoolSummaryResponse;
 
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @UseCase
-public class GetSchoolRecommendUseCase {
+public class GetAllSchoolsUseCase {
 
-    public List<SchoolRecommendResponse> execute(String jobId) {
-        String field = JobCategory.findById(jobId)
-                .map(job -> job.field)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 직업 ID: " + jobId));
-
-        return MeisterSchool.findByJobField(field).stream()
-                .map(school -> SchoolRecommendResponse.builder()
+    public List<SchoolSummaryResponse> execute() {
+        return Arrays.stream(MeisterSchool.values())
+                .map(school -> SchoolSummaryResponse.builder()
                         .schoolId(school.id)
                         .schoolName(school.name)
                         .location(school.location)
@@ -28,6 +23,6 @@ public class GetSchoolRecommendUseCase {
                         .capacity(school.capacity)
                         .competitionRate(school.competitionRate)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
